--- a/angularapp.client/src/app/app.html
+++ b/angularapp.client/src/app/app.html
@@ -6,20 +6,20 @@
 
 <!-- Bootstrap responsive table for forecasts -->
 <div *ngIf="forecasts" class="table-responsive table-container">
-    <table class="table table-striped table-bordered table-hover table-sm">
+    <table class="table table-striped table-bordered table-hover table-sm forecast-table">
         <thead class="thead-light">
             <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
+                <th class="text-nowrap">Date</th>
+                <th class="text-nowrap">Temp. (C)</th>
+                <th class="text-nowrap">Temp. (F)</th>
                 <th>Summary</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let forecast of forecasts">
-                <td>{{ forecast.date }}</td>
-                <td>{{ forecast.temperatureC }}</td>
-                <td>{{ forecast.temperatureF }}</td>
+                <td class="text-nowrap">{{ forecast.date }}</td>
+                <td class="text-end">{{ forecast.temperatureC }}</td>
+                <td class="text-end">{{ forecast.temperatureF }}</td>
                 <td>{{ forecast.summary }}</td>
             </tr>
         </tbody>
