--- a/angularapp.client/src/app/login.component.html
+++ b/angularapp.client/src/app/login.component.html
@@ -8,10 +8,10 @@
         <label for="username">Username</label>
         <input id="username" type="text" formControlName="username" class="form-control" placeholder="Enter your username" required autofocus>
       </div>
-      <!-- <div class="form-group">
+      <div class="form-group">
         <label for="password">Password</label>
         <input id="password" type="password" formControlName="password" class="form-control" placeholder="Enter your password" required>
-      </div> -->
+      </div>
       <button type="submit" class="btn-login">Sign In</button>
     </form>
   </div>
