--- a/angularapp.client/src/app/app.html
+++ b/angularapp.client/src/app/app.html
@@ -1,27 +1,1 @@
-﻿<h1 id="tableLabel">Weather forecast</h1>
-
-<p>This component demonstrates fetching data from the server.</p>
-
-<p *ngIf="!forecasts"><em>Loading... Please refresh once the ASP.NET backend has started. See <a href="https://aka.ms/jspsintegrationangular">https://aka.ms/jspsintegrationangular</a> for more details.</em></p>
-
-<!-- Bootstrap responsive table for forecasts -->
-<div *ngIf="forecasts" class="table-responsive table-container">
-    <table class="table table-striped table-bordered table-hover table-sm forecast-table">
-        <thead class="thead-light">
-            <tr>
-                <th class="text-nowrap">Date</th>
-                <th class="text-nowrap">Temp. (C)</th>
-                <th class="text-nowrap">Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let forecast of forecasts">
-                <td class="text-nowrap">{{ forecast.date }}</td>
-                <td class="text-end">{{ forecast.temperatureC }}</td>
-                <td class="text-end">{{ forecast.temperatureF }}</td>
-                <td>{{ forecast.summary }}</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+﻿<router-outlet></router-outlet>
