--- a/angularapp.client/src/app/weather.component.html
+++ b/angularapp.client/src/app/weather.component.html
@@ -27,6 +27,9 @@
             </tr>
         </tbody>
     </table>
+    <div style="display: flex; justify-content: flex-start; margin-top: 2rem;">
+      <button class="btn btn-success" (click)="onAddWeatherItem()">Add Weather Item</button>
+    </div>
 </div>
 
 <app-edit-weather-item
